# pcsc-project

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp  template.cpp  test.cpp
Expectation-methods/: ExpectedValue.cpp  ExpectedValue.h
Tests/: test.cpp  test.h
boost-math/include/boost/math/special_functions/detail/: erf_inv.hpp
computations/: CMakeLists.txt  ExpectedValue.cpp  ExpectedValue.hpp  StatisticalMoments.cpp  StatisticalMoments.hpp
computations/statistical_moments/: CMakeLists.txt
functions/: CMakeLists.txt  VectorFunction.cpp  VectorFunction.hpp
html/: ExpectedValue_8h_source.html  NormalRNG_8h_source.html  Normal__BM__RNG_8h_source.html  Normal__IT__RNG_8h_source.html  RNG_8h_source.html  StatisticalMoments_8h_source.html  UniformRNG_8h_source.html  VectorFunction_8h_source.html  annotated.html  classExpectedValue-members.html  classExpectedValue.html  classExpectedValue__inherit__graph.map  classExpectedValue__inherit__graph.md5  classGraph-members.html  classGraph.html  classNormalRNG-members.html  classNormalRNG.html  classNormalRNG__coll__graph.dot  classNormalRNG__coll__graph.map  classNormalRNG__coll__graph.md5  classNormalRNG__inherit__graph.dot  classNormalRNG__inherit__graph.map  classNormalRNG__inherit__graph.md5  classNormal__BM__RNG-members.html  classNormal__BM__RNG.html  classNormal__BM__RNG__coll__graph.dot  classNormal__BM__RNG__coll__graph.map  classNormal__BM__RNG__inherit__graph.md5  classNormal__IT__RNG-members.html  classNormal__IT__RNG.html  classNormal__IT__RNG__coll__graph.dot  classNormal__IT__RNG__coll__graph.md5  classNormal__IT__RNG__inherit__graph.map  classRNG-members.html  classRNG.html  classRNG__inherit__graph.dot  classRNG__inherit__graph.map  classRNG__inherit__graph.md5  classStatisticalMoments-members.html  classStatisticalMoments.html  (+30 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  searchdata.js
latex/: annotated.tex  classExpectedValue.tex  classExpectedValue__inherit__graph.md5  classGraph.tex  classNormalRNG.tex  classNormalRNG.tex.tmp  classNormalRNG__coll__graph.dot  classNormalRNG__coll__graph.md5  classNormalRNG__inherit__graph.dot  classNormalRNG__inherit__graph.md5  classNormal__BM__RNG.tex  classNormal__BM__RNG__coll__graph.md5  classNormal__BM__RNG__inherit__graph.dot  classNormal__IT__RNG.tex  classNormal__IT__RNG__coll__graph.md5  classNormal__IT__RNG__inherit__graph.dot  classRNG.tex  classRNG__inherit__graph.dot  classRNG__inherit__graph.md5  classStatisticalMoments.tex  classStatisticalMoments__inherit__graph.md5  classUniformRNG.tex  classUniformRNG__coll__graph.md5  classUniformRNG__inherit__graph.dot  classVectorFunction.tex  hierarchy.tex  refman.tex
lib/eigen/: CMakeLists.txt
lib/eigen/blas/: CMakeLists.txt
lib/eigen/cmake/: FindComputeCpp.cmake
lib/eigen/doc/: CMakeLists.txt
lib/eigen/doc/snippets/: CMakeLists.txt
lib/eigen/lapack/: CMakeLists.txt
lib/eigen/unsupported/Eigen/: CMakeLists.txt
lib/eigen/unsupported/test/: CMakeLists.txt
random_number_generators/: CMakeLists.txt  RNG.cpp  RNG.hpp
random_number_generators/normal/: NormalRNG.cpp  NormalRNG.hpp  NormalRNG_BM.hpp  NormalRNG_ITS.cpp  NormalRNG_ITS.hpp
random_number_generators/uniform/: UniformRNG.cpp  UniformRNG.hpp  uniform-RNG.cpp  uniform-RNG.hpp
rng/: RNG.h
rng/Normal-rng/: NormalRNG.cpp  NormalRNG.h  Normal_BM_RNG.cpp  Normal_BM_RNG.h  Normal_IT_RNG.cpp  Normal_IT_RNG.h
rng/Uniform-rng/: UniformRNG.h
src/: CMakeLists.txt
src/Computations/: ExpectedValue.cpp  ExpectedValue.h  StatisticalMoments.cpp  StatisticalMoments.h
src/Functions/: VectorFunction.cpp  VectorFunction.h
src/computations/: ExpectedValue.cpp  ExpectedValue.hpp  StatisticalMoments.cpp  StatisticalMoments.hpp
src/functions/: CMakeLists.txt  VectorFunction.cpp  VectorFunction.hpp
src/graph/: graph.cpp  graph.h
src/random_number_generators/: CMakeLists.txt  RNG.cpp  RNG.hpp
src/random_number_generators/normal/: CMakeLists.txt  NormalRNG.cpp  NormalRNG.hpp  NormalRNG_ITS.cpp  NormalRNG_ITS.hpp
src/random_number_generators/uniform/: CMakeLists.txt  UniformRNG.cpp  UniformRNG.hpp
src/rng/: RNG.cpp  RNG.h
src/rng/Normal-rng/: NormalRNG.cpp  NormalRNG.h  Normal_BM_RNG.cpp  Normal_BM_RNG.h  Normal_IT_RNG.cpp  Normal_IT_RNG.h
src/rng/Uniform-rng/: UniformRNG.cpp  UniformRNG.h
