#add_subdirectory(week1/code_snippets)
#add_subdirectory(week2/code_snippets)
#add_subdirectory(week3/code_snippets)
#add_subdirectory(week4/code_snippets)
#add_subdirectory(week5/code_snippets)
#add_subdirectory(week6/code_snippets)
#add_subdirectory(week7/code_snippets)
#add_subdirectory(week8/code_snippets)
#add_subdirectory(week9/code_snippets)
add_subdirectory(week10/code_snippets)
